tests/errors/invalid-staff-label.typ
#import "../../src/lib.typ": score

#score(
  staves: (
    violin: (clef: "treble", label: ""),
  ),
  time: "4/4",
  bars: ((violin: "c5:w"),),
)
